# snippets

./: .coveragerc  Pipfile  README.md  config_reader.py  contextmanagers.py  curve_fit.py  matplotlib_latexing.py  myiter.py  parse_cfour_vpt2.py  plot_csv  pyproject.toml  setup.cfg  ss_scrape.py
.github/workflows/: test.yml
rdkit/: functions.py
smiles/: amino_acid_smiles.py  gen_smiles.py  smiles_to_xyz.py
snippets/: __init__.py  config_reader.py  contextmanagers.py  curve_fit.py  default_config.toml  matplotlib_latexing.py  myiter.py  parse_cfour_vpt2.py  plot_csv  string_editing.zsh
snippets/rdkit/: functions.py
snippets/smiles/: __init__.py  amino_acid_smiles.py  gen_smiles.py  smiles_to_xyz.py
tests/: test_config_readers.py  test_contextmanagers.py
