[tool.poetry]
name = "snippets"
version = "0.1.0"
description = "Snippets"
authors = ["Jonathon Vandezande"]
keywords = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/jevandezande/snippets"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "*"
networkx = "*"
numpy = "*"
rdkit = "*"
more_itertools = "*"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pre-commit = "*"
ruff = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]

[tool.mypy]
files = ["snippets", "tests"]
strict = true
pretty = true

[[tool.mypy.overrides]]
module = "rdkit.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
